# backend

./: .env.example  .gitignore  README.md  database_diagram.drawio  db.sqlite3  pyproject.toml  requirements.txt
apps/api/v1/: serializers.py  views.py
apps/api/v2/: serializers.py  views.py
apps/core/: models.py
config/: settings.py  urls.py
core/: factories.py  settings.py  urls.py
docker/: app.Dockerfile  docker-compose.yml
ideaboard/: admin.py  counters.py  models.py  tasks.py
ideaboard/api/v1/: serializers.py  urls.py  views.py
ideaboard/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_auto_20260526_1332.py  0004_rename_cover_imgage_url_idea_cover_image_url.py  0005_idea_counters.py
tests/: conftest.py  test_ideas.py  test_like.py  test_registration.py  test_tags.py  test_user.py
