[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.3",
    "django-environ>=0.11,<1.0",
    "django-filter>=24.1,<25.0",
    "django-redis>=5.3,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "pillow>=10.0,<12.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "pytest-factoryboy==2.8.1",
    "redis>=5.0,<6.0",
    "psycopg2-binary>=2.9,<3.0", 
    "factory-boy>=3.3,<4.0",    
    "Faker>=25.0,<26.0",         
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ideaboard.settings"
python_files = ["test_*.py", "*_tests.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["core*", "ideaboard*"]
exclude = ["docker*", "tests*", "media*", "static*"]